@@ -24,7 +24,6 @@ libc = "0.2.18"
 [target."cfg(unix)".dependencies]
 ioctl-rs = "0.1.5"
 nix = { git = "https://github.com/nix-rust/nix" }
-termios = "0.2.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libudev = "0.2.0"
